[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamable"
version = "1.6.0"
description = "Pythonic Stream-like manipulation of iterables"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache 2.0"}
authors = [
    {name = "ebonnal", email = "bonnal.enzo.dev@gmail.com"},
]
maintainers = [
    {name = "ebonnal", email = "bonnal.enzo.dev@gmail.com"},
]
dependencies = [
    "tqdm>=4.65.0",
]

[project.urls]
Homepage = "http://github.com/ebonnal/streamable"
Issues = "http://github.com/ebonnal/streamable/issues"

[tool.hatch.build.targets.wheel]
packages = ["streamable"]

[dependency-groups]
dev = [
    "ipykernel>=6.16.2",
    "jupyter>=1.1.1",
]
